--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-out" data-aos-delay="200">
+                                    <img src="E:\HtmlProject\asset\images\logo background.jpg.jpg" class="img-fluid animated" alt="">
+          
            
           </div>
         </div>
