--- a/index.html
+++ b/index.html
@@ -66,6 +66,24 @@
 
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
+       <title>Background Image Alignment</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+
+        .background {
+            background-image: url("E:\HtmlProject\asset\images\logo background.jpg.jpg");
+            background-size: cover; /* Ensures the image covers the entire element */
+            background-position: center; /* Centers the image */
+            background-repeat: no-repeat; /* Prevents the image from repeating */
+            height: 100vh; /* Full viewport height */
+        }
+    </style>
+</head>
+<body>
 
       <div class="container">
         <div class="row gy-4">
