--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-out" data-aos-delay="200"
-            <img src="asset\images\logo background.jpg.jpg" style="width: 500px; height: 400px;" class="img-fluid animated" alt="">
+            <img src="asset\images\logo background.jpg.jpg" class="img-fluid animated" alt="">
           
            
           </div>
